update  BackgroundRunner loop logic